--- a/views/index.jade
+++ b/views/index.jade
@@ -15,9 +15,10 @@ block body
 
   script( src='http://libs.baidu.com/jquery/1.9.1/jquery.min.js' )
   script( src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
-  script(src='js/lib/angular/angular.js')
-  script(src='js/app.js')
-  script(src='js/services.js')
-  script(src='js/controllers.js')
-  script(src='js/filters.js')
-  script(src='js/directives.js')
+  //- script(src='js/lib/angular/angular.js')
+  //- script(src='js/app.js')
+  //- script(src='js/services.js')
+  //- script(src='js/controllers.js')
+  //- script(src='js/filters.js')
+  //- script(src='js/directives.js')
+  script( src='js/main.min.js' )
