[deploy]enhanced-gulp

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,4 +21,4 @@ block body
   //- script(src='js/controllers.js')
   //- script(src='js/filters.js')
   //- script(src='js/directives.js')
-  script( src='js/main.min.js' )
+  script( src='js/main.js' )
