--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -2,7 +2,7 @@ div.row
   div.col-lg-12
     div.alert.alert-warning
       i.fa.fa-bullhorn
-      &nbsp;現總共有 {{posts.length}} 篇文章。請即賜閱！
+      &nbsp;現總共有 {{posts.length}} 篇文章。請即垂閱！
 
 div.row
   div.col-lg-4(ng-repeat='post in posts', ng-init='colors')
